--- a/src/app/pages/hero/hero-page.component.html
+++ b/src/app/pages/hero/hero-page.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <h1>{{ name() }}</h1>
 
 
@@ -28,3 +30,6 @@ Cambiar nombre
 
 <button (click)="resetForm()" class="btn btn-primary mx-2">Reset</button>
 
+<hr>
+
+<app-dragonball-page></app-dragonball-page>
