--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="container-fluid vh-100 d-flex justify-content-center align-items-center bg-light">
   <div class="card shadow-lg w-75">
     <div class="card-body text-center">
