--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -35,7 +35,7 @@
         <div class="container my-5">
           <div class="card shadow-lg border-0">
             <div class="card-body">
-              <h2 class="mb-4 text-center text-primary">Preguntas y Respuestas</h2>
+              <h2 class="mb-4 text-center text-primary">Preguntas y Respuestas "Usuarios component zoneless"</h2>
 
               <h4 class="text-dark">¿Qué es zone.js?</h4>
               <p class="text-muted">
